# zk-sol

./: .gitattributes  .gitignore
anchor/: Anchor.toml  Cargo.toml  package-lock.json  package.json  solita.ts  tsconfig.json
anchor/circuits/: accumulator.circom  commitment-hasher.circom  commitment-wrapper.circom  merkleTree.circom  nullifier-hasher.circom  poseidon.circom  withdraw.circom  withdraw20.circom  withdraw3.circom  withdraw32.circom
anchor/circuits-output/withdraw20/: pot12_0001.ptau  pot12_beacon.ptau  pot12_final.ptau  verification_key.json  withdraw20.r1cs  withdraw20.sym  withdraw20_constraints.json
anchor/circuits-output/withdraw20/withdraw20_cpp/: Makefile
anchor/circuits-output/withdraw20/withdraw20_js/: withdraw20.wasm
anchor/circuits-output/withdraw20_rs/: withdraw20_verifying_key.rs
anchor/circuits-output/withdraw3/: pot12_0001.ptau  pot12_beacon.ptau  pot12_final.ptau  verification_key.json  withdraw3.r1cs  withdraw3.sym  withdraw3_0000.zkey  withdraw3_constraints.json  withdraw3_final.zkey
anchor/circuits-output/withdraw3/withdraw3_cpp/: Makefile
anchor/circuits-output/withdraw3/withdraw3_js/: withdraw3.wasm
anchor/circuits-output/withdraw_rs/: verifying_key.rs  withdraw_verifying_key.rs
anchor/circuits/ed25519-circom-circuits/: batchverify.circom  chunkify.circom  lt.circom  modulus.circom  pointcompress.circom
anchor/helpers-node/: sol-node-helpers.ts
anchor/programs/zklsol/: Cargo.toml
anchor/programs/zklsol/src/: error.rs  lib.rs  utils.rs  withdraw3_verifying_key.rs
anchor/programs/zklsol/src/instructions/: mod.rs
anchor/programs/zklsol/src/instructions/lut/: close_address_lookup_table.rs  create_address_lookup_table.rs  deactivate_address_lookup_table.rs  extend_address_lookup_table.rs  mod.rs
anchor/programs/zklsol/src/instructions/merkle/: close_merkle.rs  close_pda_account.rs  create_merkle.rs  create_merkle_node.rs  deposit.rs  dump_proof.rs  mod.rs  withdraw.rs
anchor/programs/zklsol/src/state/: merkle_node.rs  merkle_proof.rs  merkle_state.rs  merkle_tree.rs  merkle_zeros.rs  mod.rs  settings.rs  user_address_lookup_table.rs  wasm.rs
anchor/solita/accounts/: MerkleNodeState.ts  MerkleZeros.ts
anchor/solita/instructions/: dumpProof.ts  extendAddressLookupTable.ts
anchor/solita/pda/: merkle_pda.ts
anchor/solita/types/: CreateAddressLookupTableArgs.ts
anchor/solita/wrappers/: merkle_wrapper.ts  user_address_lookup_table_wrapper.ts
anchor/tests/: address-lookup-table-test.ts  crypto-test.ts  merkle-test.ts  wasm-test.ts  withdraw3-test.ts
cloudflare-page-app/: .env  package-lock.json  package.json
cloudflare-page-app/src/: constants.ts
cloudflare-page-app/src/pages/: claim.tsx
cloudflare-page-app/src/solita/: crypto-helpers.ts  index.ts  sol-helpers.ts  zk-helper.ts
cloudflare-page-landing-page/: eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
cloudflare-page-landing-page/src/: App.tsx  global.css
cloudflare-page-landing-page/src/components/: HeroSection.tsx  StatsSection.tsx
cloudflare-page-landing-page/src/pages/: home.tsx
cloudflare-worker-typescript/: package-lock.json  package.json  wrangler.jsonc
cloudflare-worker-typescript/src/: index.ts  keypair.ts
cloudflare-worker-typescript/src/helpers/: close_all.ts  constants.ts  dump_proof.ts  relay.ts
cloudflare-worker-typescript/src/solita/: generic-helpers.ts  sol-helpers.ts
landing-page/: package-lock.json
landing-page/src/: constants.ts
landing-page/src/components/: FeaturesSection.tsx
landing-page/src/hooks/: use-toast.ts
scripts/: backup-generate-vkey.sh  check-constraints-size.sh  compile-circuit.sh  copy-solita.sh  generate-vkey.sh  install.sh  parse-vk-to-rust.ts  parse_vk_to_rust.js  test.sh  vk-to-rs.js  wasm-build.sh
serverless-worker/: README.md  keypair.ts  package-lock.json  package.json  vercel.json
serverless-worker/api/: cron.ts  dump.ts  test.ts
serverless-worker/solita/: sol-helpers.ts
serverless-worker/solita/accounts/: MerklePendingProofState.ts  MerkleState.ts  NullifierHash.ts
serverless-worker/solita/constants/: seeds.ts
serverless-worker/solita/errors/: index.ts
serverless-worker/solita/instructions/: deposit.ts  index.ts
serverless-worker/solita/types/: MerkleProof.ts  WithdrawArgs.ts
serverless-worker/solita/wasm-zklsol/: zklsol.js
zkSOL-webapp/: .env  next.config.ts  package-lock.json  package.json  tailwind.config.js
zkSOL-webapp/app/: layout.tsx  page.tsx  providers.tsx
zkSOL-webapp/components/: ScrollToRoadmapCode.tsx  WalletGuard.tsx  content.tsx  faq.tsx  logo.tsx  navbar2.tsx  primitives.ts  roadmap.tsx  token-dropdown.tsx
zkSOL-webapp/components/action-box/: deposit.tsx  send.tsx  tabs-wrapper.tsx
zkSOL-webapp/config/: site.ts
zkSOL-webapp/constants/: common.ts
zkSOL-webapp/context/: wallet-context.tsx
zkSOL-webapp/models/: jup.model.ts
zkSOL-webapp/solita/: crypto-helpers.ts  sol-helpers.ts  zk-helper.ts
zkSOL-webapp/solita/accounts/: UserAddressLookupTable.ts
zkSOL-webapp/styles/: globals.css
zkSOL-webapp/types/: deposit.ts
(+34 files in other folders)
