[package]
name = "zklsol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zklsol"

[features]
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
bytemuck = { workspace = true }
solana-curve25519 = { workspace = true }
solana-bn254 = { workspace = true }
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true, features = ["spl-associated-token-account", "spl-token", "metadata"] }
arrayref = { workspace = true }
anchor-lang-idl = { workspace = true, features = ["convert"] }
sha2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
groth16-solana = { workspace = true }
ark-bn254 = { workspace = true }
ark-serialize = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
solana-poseidon = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
borsh = { workspace = true }
ark-ff = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
solana-sdk = { workspace = true }